--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -2,20 +2,53 @@ doctype html
 html
  include common/_head
  body
-   .page
+   .header
     .auth
      .button Авторизоваться
-    .mainframe
-     .img_sect 
-      img(src="../assets/img/author.png")
-     h1 Бутин Максим
-     p Личный сайт веб разработчика
-     .soc_icons
-      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="17" viewBox="0 0 30 17.1"><path class="icons" d="M27.6 5.8c-3 4-3.4 3.7-0.9 6 2.4 2.2 2.9 3.3 3 3.5 0 0 1 1.8-1.1 1.8l-4 0.1c-0.9 0.2-2-0.6-2-0.6 -1.5-1-2.9-3.7-4-3.4 0 0-1.1 0.4-1.1 2.8 0 0.5-0.2 0.8-0.2 0.8s-0.3 0.3-0.8 0.3h-1.8c-4 0.3-7.4-3.4-7.4-3.4S3.4 9.7 0.1 1.8c-0.2-0.5 0-0.8 0-0.8S0.3 0.8 1 0.8l4.3 0c0.4 0.1 0.7 0.3 0.7 0.3s0.3 0.2 0.4 0.5c0.7 1.8 1.6 3.3 1.6 3.3 1.6 3.2 2.6 3.8 3.2 3.4 0 0 0.8-0.5 0.6-4.4 -0.1-1.4-0.5-2-0.5-2C11 1.4 10.3 1.3 10 1.2c-0.2 0 0.2-0.6 0.7-0.8 0.8-0.4 2.1-0.4 3.7-0.4 1.3 0 1.6 0.1 2.1 0.2 1.5 0.4 1 1.7 1 5 0 1.1-0.2 2.5 0.6 3 0.3 0.2 1.1 0 3.1-3.4 0 0 0.9-1.6 1.7-3.5 0.1-0.3 0.4-0.5 0.4-0.5s0.3-0.1 0.6-0.1l4.5 0c1.4-0.2 1.6 0.5 1.6 0.5C30.2 1.9 29.5 3.4 27.6 5.8z" fill="#FFF"/></svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="22" viewBox="0 0 26 22"><path class ="icons"d="M25 17.4C23 21.6 17.3 22 13.3 22c-4.1 0-10.1-0.4-12.3-4.6C0.2 15.8 0 14 0 12.3c0-2.3 0.6-4.4 2.1-6.2C1.8 5.2 1.7 4.3 1.7 3.4 1.7 2.2 2 1.1 2.5 0c2.5 0 4 1.1 5.9 2.5C10 2.2 11.6 2 13.3 2c1.5 0 3 0.2 4.4 0.5C19.5 1 21.1 0 23.5 0c0.5 1.1 0.8 2.2 0.8 3.4 0 0.9-0.1 1.8-0.4 2.6C25.4 7.8 26 10 26 12.3 26 14 25.8 15.8 25 17.4zM18.5 10.5c-1 0-2 0.2-3 0.3C14.6 11 13.8 11 13 11s-1.6 0-2.5-0.2C9.5 10.7 8.5 10.5 7.5 10.5c-2.5 0-4 2.1-4 4.5 0 4.8 4.4 5.5 8.2 5.5h2.6c3.8 0 8.2-0.7 8.2-5.5C22.5 12.6 21 10.5 18.5 10.5zM8 18c-1.4 0-2-1.9-2-3s0.6-3 2-3 2 1.9 2 3S9.4 18 8 18zM18 18c-1.4 0-2-1.9-2-3s0.6-3 2-3 2 1.9 2 3S19.4 18 18 18z" fill="#FFF"/></svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="23" viewBox="0 0 24 22.9"><path class="icons" d="M2.9 5.3H2.8C1.1 5.3 0 4.2 0 2.7 0 1.2 1.2 0 2.9 0c1.8 0 2.9 1.2 2.9 2.7C5.8 4.2 4.7 5.3 2.9 5.3zM5.5 22.9H0.3V7.5h5.2V22.9zM24 22.9h-5.1v-8.3c0-2.1-0.7-3.5-2.6-3.5 -1.4 0-2.3 1-2.6 1.9 -0.1 0.3-0.2 0.8-0.2 1.3v8.6H8.3c0.1-14 0-15.5 0-15.5h5.1v2.3h0c0.7-1.1 1.9-2.6 4.7-2.6 3.4 0 5.9 2.2 5.9 7V22.9z" fill="#FFF"/></svg>
-     .info
-      a Мои работы
-      a Обо мне
-      a Блог
-   footer &copy Бутин Максим | создано с любовью в LoftSchool | 2016
+  .flip-container
+   .flipper
+    .page__front
+     .mainframe
+      .img__sect 
+       img(src="../assets/img/author.png")
+      h1 Бутин Максим
+      p Личный сайт веб разработчика
+      .soc__icons
+       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="17" viewBox="0 0 30 17.1"><path class="icons" d="M27.6 5.8c-3 4-3.4 3.7-0.9 6 2.4 2.2 2.9 3.3 3 3.5 0 0 1 1.8-1.1 1.8l-4 0.1c-0.9 0.2-2-0.6-2-0.6 -1.5-1-2.9-3.7-4-3.4 0 0-1.1 0.4-1.1 2.8 0 0.5-0.2 0.8-0.2 0.8s-0.3 0.3-0.8 0.3h-1.8c-4 0.3-7.4-3.4-7.4-3.4S3.4 9.7 0.1 1.8c-0.2-0.5 0-0.8 0-0.8S0.3 0.8 1 0.8l4.3 0c0.4 0.1 0.7 0.3 0.7 0.3s0.3 0.2 0.4 0.5c0.7 1.8 1.6 3.3 1.6 3.3 1.6 3.2 2.6 3.8 3.2 3.4 0 0 0.8-0.5 0.6-4.4 -0.1-1.4-0.5-2-0.5-2C11 1.4 10.3 1.3 10 1.2c-0.2 0 0.2-0.6 0.7-0.8 0.8-0.4 2.1-0.4 3.7-0.4 1.3 0 1.6 0.1 2.1 0.2 1.5 0.4 1 1.7 1 5 0 1.1-0.2 2.5 0.6 3 0.3 0.2 1.1 0 3.1-3.4 0 0 0.9-1.6 1.7-3.5 0.1-0.3 0.4-0.5 0.4-0.5s0.3-0.1 0.6-0.1l4.5 0c1.4-0.2 1.6 0.5 1.6 0.5C30.2 1.9 29.5 3.4 27.6 5.8z" fill="#FFF"/></svg>
+       <svg xmlns="http://www.w3.org/2000/svg" width="26" height="22" viewBox="0 0 26 22"><path class ="icons"d="M25 17.4C23 21.6 17.3 22 13.3 22c-4.1 0-10.1-0.4-12.3-4.6C0.2 15.8 0 14 0 12.3c0-2.3 0.6-4.4 2.1-6.2C1.8 5.2 1.7 4.3 1.7 3.4 1.7 2.2 2 1.1 2.5 0c2.5 0 4 1.1 5.9 2.5C10 2.2 11.6 2 13.3 2c1.5 0 3 0.2 4.4 0.5C19.5 1 21.1 0 23.5 0c0.5 1.1 0.8 2.2 0.8 3.4 0 0.9-0.1 1.8-0.4 2.6C25.4 7.8 26 10 26 12.3 26 14 25.8 15.8 25 17.4zM18.5 10.5c-1 0-2 0.2-3 0.3C14.6 11 13.8 11 13 11s-1.6 0-2.5-0.2C9.5 10.7 8.5 10.5 7.5 10.5c-2.5 0-4 2.1-4 4.5 0 4.8 4.4 5.5 8.2 5.5h2.6c3.8 0 8.2-0.7 8.2-5.5C22.5 12.6 21 10.5 18.5 10.5zM8 18c-1.4 0-2-1.9-2-3s0.6-3 2-3 2 1.9 2 3S9.4 18 8 18zM18 18c-1.4 0-2-1.9-2-3s0.6-3 2-3 2 1.9 2 3S19.4 18 18 18z" fill="#FFF"/></svg>
+       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="23" viewBox="0 0 24 22.9"><path class="icons" d="M2.9 5.3H2.8C1.1 5.3 0 4.2 0 2.7 0 1.2 1.2 0 2.9 0c1.8 0 2.9 1.2 2.9 2.7C5.8 4.2 4.7 5.3 2.9 5.3zM5.5 22.9H0.3V7.5h5.2V22.9zM24 22.9h-5.1v-8.3c0-2.1-0.7-3.5-2.6-3.5 -1.4 0-2.3 1-2.6 1.9 -0.1 0.3-0.2 0.8-0.2 1.3v8.6H8.3c0.1-14 0-15.5 0-15.5h5.1v2.3h0c0.7-1.1 1.9-2.6 4.7-2.6 3.4 0 5.9 2.2 5.9 7V22.9z" fill="#FFF"/></svg>
+      .info
+       ul.about
+         li.about--item
+          a.about--link Мои работы
+         li.about--item
+          a.about--link Обо мне
+         li.about--item 
+          a.about--link Блог
+    .page__back
+      .mainframe
+       .authorize
+        h2 Авторизуйтесь
+       .mainframe__login
+       form.login__form
+         .login__img		
+         input(type="text" placeholder="Логин").login__input
+         .pass__img
+         input(type="text" placeholder="Пароль").password__input
+        .mainframe__check
+         input(type="checkbox" name="check" id="check").checkbox
+         label(for="check") Я человек
+        .mainframe__radio
+         p.check__question Вы точно не робот?
+         input(type="radio" name="radio" id="radio-1" ).radio
+         label(for="radio-1") Да
+         input(type="radio" name="radio" id="radio-2" ).radio
+         label(for="radio-2") Не уверен
+        .mainrame__submit
+        .info__login
+         ul.submit__form
+          li.submit__form
+           a.submit__form На главную
+          li.submit__form
+           a.submit__form Войти
+  footer &copy Бутин Максим | создано с любовью в LoftSchool | 2016
