--- a/source/style/common/front__page.scss
+++ b/source/style/common/front__page.scss
@@ -2,11 +2,13 @@ h1 {
 	font-family: 'robotomedium',sans-serif;
    font-size: 28px;
    color: #455a64;
+   margin: 9px 0 3px 0;
 }
 p {
 	font-family: 'robotoregular';
-	font-size: 16px;
+	font-size: 18px;
 	color: #86949c;
+	 margin: 0 0 31px 0;
 }
 .mainframe {
 	height: 400px;
@@ -18,71 +20,66 @@ p {
   	left: 50%;
   	transform: translate(-50%, -50%);
   	text-align: center;
-  	padding-top: 37px;
   	border-radius: 5px;
   	flex: 1 0 auto;
 }
 
-// .info {
-// 	border-radius: 5px;
-// 	background-color: #13b6a1;
-// 	position: absolute;
-//     left: 0;
-//     bottom: 0;
-//     font-family: 'robotomedium',sans-serif;
-// }
-
-
+.img__sect {
+	padding-top: 37px;
+}
 
 .info {
 	position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 12px;
     font-family: 'robotomedium',sans-serif;
     & a {
 	color: #fff;
 	background-color: #13b6a1;
-	border-bottom-radius: 5px;
+	
     }
-    & a:hover {
+    & a.about--link:hover {
     	background-color: #088c85;
     }
 }
+
 .about {
-	    list-style: none;
-    padding: 0;
-    font-size: 0;
-    width: 100%;
-    display: table;
-    position: absolute;
-    bottom: 0;
-   }
-	
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
+	display: inline-block;
+	width: 100%;
+}
+
 .about--item {
-	    display: table-cell;
-    border-right: 2px solid rgba(222, 227, 231, 0.5);
+	display: inline-block;
+	padding: 0;
 }
 
 .about--link {
-	    color: #fff;
-    font: 500 16px roboto;
-    height: 45px;
-    padding: 0 30px;
-    line-height: 45px;
-    text-align: center;
-    display: block;
-    text-decoration: none;
-    background-color: #e6a731;
-    -webkit-transition: all .2s;
-    transition: all .2s;
+	padding: 12px 32px;
+	margin: 0 -3px 0 0;
+	text-decoration: none;
+
 }
+
+a.about--link.first{
+		border-bottom-left-radius: 5px;
+	}
+	a.about--link.last{
+		border-bottom-right-radius: 5px;
+		padding: 12px 34px;
+	}
+
 .page__front, .page_back {
  
   flex: 1 0 auto; // Равно высоте футера
 }
 
 svg {
-	margin: 0 17px;
+	margin: 0 12px;
+	
+
 }
 .icons {
 	
