--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -1,14 +1,20 @@
-html,body {
-	height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-  margin: 0;
-  background-image: url(../img/newback.png);
-  height: 100%;
   display: flex;
   flex-direction: column;
- 
+}
+
+header,
+footer {
+  flex: 0 0 auto;
+}
+
+.flip-container {
+  flex: 1 0 auto;
 }
 
 .auth {
@@ -21,6 +27,7 @@ body {
 }
 
 .button {
+	cursor: pointer;
    font-family: 'robotoregular', sans-serif;
   padding:  15px 0 ;
   border: 2px solid #fff;
@@ -35,16 +42,83 @@ body {
 
 
 footer {
-	flex: 0 0 auto;
-	height: 50px;
+	position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    height: 150px; 
 	font-size: 16px;
 	text-align: center;
 	font-family: 'robotolight',sans-serif;
 	color: #fff;
 	
 }
+
+/*============PARALLAX STYLES==================== */
  
-/* ============Authorization ============ */
+ ul#scene {
+ 	list-style: none;
+ 	padding: 0;
+ 	margin: 0;
+ 	height: 100%;
+ 	width: 100%;	
+ }
+
+.layer {
+	opacity: 0,8;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+ 	width: 100%;
+    
+}
+
+.layer1{
+	background: url('../img/Layer 1.jpg');
+}
+
+.layer2 {
+	background: url('../img/Layer 2.jpg');
+}
+
+.sky_layer {
+	background:url('..img/sky.jpg');
+}
+
+.layer4 {
+	background: url('../img/Layer 4.jpg');
+}
+
+.layer5 {
+	background:url('../img/Layer 5.jpg');
+}
+
+.layer6 {
+	background:url('../img/Layer 6.jpg');
+}
+.layer7 {
+	background:url('../img/Layer 7.jpg');
+	
+}
+.layer8 {
+	background:url('../img/Layer 8.jpg');
+
+}
+.cloud {
+	background:url('../img/cloud_PNG4.jpg');
+}
+.cloud2 {
+	background:url('../img/cloud_PNG5.jpg');
+}
+
+
+
+
+
+
+
+/* ============FLIP STYLES ============ */
 
 
 /* entire container, keeps perspective */
@@ -52,7 +126,7 @@ footer {
 	perspective: 1000px;
 }
 	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+	.flip-container.flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
 	transform: rotateY(180deg);
 }
 
