--- a/source/style/common/greating.scss
+++ b/source/style/common/greating.scss
@@ -1,4 +1,23 @@
 @font-face {
+    font-family: 'robotobold';
+    src: url('..fonts/Roboto-Bold-webfont.eot');
+    src: url('..fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('..fonts/Roboto-Bold-webfont.woff') format('woff'),
+         url('..fonts/Roboto-Bold-webfont.ttf') format('truetype'),
+         url('..fonts/Roboto-Bold-webfont.svg#robotobold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'BERNIERRegular-Regular';
+    src: url('../fonts/BERNIERRegular-Regular.otf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'robotomedium';
     src: url('../fonts/Roboto-Medium-webfont.eot');
     src: url('../fonts/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
