--- a/source/style/common/welcome.scss
+++ b/source/style/common/welcome.scss
@@ -1,18 +1,24 @@
-html,
-body {
-  height: 100%;
-}
+// html,
+// body {
+//   height: 100%;
+// }
 
-body {
-  display: flex;
-  flex-direction: column;
-}
+// body {
+//   display: flex;
+//   flex-direction: column;
 
-header,
-footer {
-  flex: 0 0 auto;
-}
+// }
 
+// header,
+// footer {
+//   flex: 0 0 auto;
+// }
+
+.body-welcome {
+	background: url(../img/good_back.jpg);
+	background-size: cover;
+}
+	
 .flip-container {
   flex: 1 0 auto;
 }
@@ -41,13 +47,13 @@ footer {
 }
 
 
-footer {
+.footer-welcome {
 	position: absolute;
     left: 0;
     bottom: 0;
     height: 100px;
     width: 100%;
-    height: 150px; 
+    
 	font-size: 16px;
 	text-align: center;
 	font-family: 'robotolight',sans-serif;
@@ -172,6 +178,6 @@ footer {
 
 
 
-@import 'common/greating';
+
 @import 'common/front__page.scss';
 @import 'common/back_page.scss';
