--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -47,7 +47,7 @@ html
          li.about--item
           a(href="#").about--link.first Мои работы
          li.about--item
-          a(href="#").about--link Обо мне
+          a(href="/about.html").about--link Обо мне
          li.about--item 
           a(href="/blog.html").about--link.last Блог
     .page__back
