--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -49,11 +49,12 @@ hr {
 }
 
 
-@import 'common/greating';
+@import 'common/fonts';
 @import 'common/header';
 @import 'common/footer';
-@import 'common/welcome';
-@import 'common/blog';
+@import 'pages/welcome';
+@import 'pages/blog';
+@import 'pages/about';
 
 
 
