--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -53,6 +53,7 @@ hr {
 @import 'common/header';
 @import 'common/footer';
 @import 'pages/welcome';
+@import 'pages/works';
 @import 'pages/blog';
 @import 'pages/about';
 
