--- a/source/style/pages/works.scss
+++ b/source/style/pages/works.scss
@@ -1,181 +1,34 @@
-@import 'common/greating';
-html,
-body {
-  height: 100%;
+.works__title {
+    margin: 0;
+    padding: 70px 0;
+    text-align: center;
+    font: 63px/1 'BERNIERRegular-Regular', Helvetica, Arial;
+    color: #373e42;
+
+    &._logo {
+    	background:url(../img/works_header.svg)center no-repeat;
+    	background-color: #faf8f0;
+    }
 }
 
-body {
-  display: flex;
-  flex-direction: column;
+.works__title_words { 
+display: inline-block;
+    position: relative;
+    max-width: 285px;}
+
+.slider__section {
+	display: flex;
+	    background: linear-gradient(to right, #f0efe9 0%, #f0efe9 50%, #efebe0 50%, #efebe0 100%);
+	    height: 750px;
 }
-
-header,
-footer {
-  flex: 0 0 auto;
-}
-
-
-ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-
-li {
-	display: inline-block;
-}
-
-a {
-	text-decoration: none;
-}
-
-hr {
-	margin: 0;
-	color:#fff;
-}
-
-footer {
-	background-color: #2f454a;
-	
-}
-
-header {
-	background: url(../img/good_back.jpg);
-	background-size: cover;
+.slider__descr_section{
 	height: 100%;
-	
-}
-
-.social__links {
-	position: absolute;
-	right: 0;
-	top: 10px;
-
-}
-
-
-
-.author__section {
-	text-align: center;
-	background: url(../img/portfolio_header.svg) bottom center no-repeat;
-    padding-top: 138px;
-
-}
-
-.author__header {
-	font-family: 'robotomedium', sans-serif;
-	font-size: 35px;
-}
-
-.triangle__section {
-  margin-top: 440px;
-}
-
-.traingle {
-  fill:#fff;
-}
-/* ===============MY WORK STYLES============= */
-
-.mywork__heading { 
-font-family: 'BERNIERRegular-Regular', sans-serif;
-font-size: 63px;
-}
-
-.mywork {
-  flex: 1 0 auto;
-}
-
-.mywork__logo {
-	padding-top: 50px;
-	background: url(../img/works_header.svg) center center no-repeat;
-	text-align: center;
-	color: #373e42;
-}
-
-.mywork__description {
-	height: 754px;
-    width: 49%;
-    display: inline-block;
-    background-color: #f0efe9;
-}
-
-.mywork__show-section {
-	height: 754px;
-	width: 49%;
-	display: inline-block;
-}
-
-
-
-.mywork__switch-section {
-	display: inline-block;
-	width: 100%;
-
-}
-      .mywork__switch-section-down {
-      	width: 49%;
-      	height: 227px;
-      	display: inline-block;
-      }
-      .mywork__switch-section-up {
-      	width: 49%;
-      	height: 227px;
-      	display: inline-block;
-      }
-
-
-      .about-me__wrapper {
-      	background:url(../img/bg_about.jpg);
-      	height: 100%;
-      }
-/* =============BOTTOM STYLES============== */
-
-.upper__section {
-	background-color: #2f454a;
-	height: 74px;
+	flex:1;
 	position: relative;
 }
 
-li.upper__section--item {
-	padding-top: 24px;
-	margin:  0;
-	
-}
-a.upper__section--link {
-	color: #fff;
-	margin: 0 30px;
-	font-family: 'robotomedium',sans-serif;
-	font-size: 16px;
-	
-}
-
-
-
-.upper__section--item__right{
-	padding: 0 10px;
-	}
-
-.botom__section {
-	height: 68px;
-}	
-.bottom__descr {
-	display: inline-block;
-}
-.bottom__descr--p {
-	color: #97a1a4;
-	width: 570px;
-	margin-left: 30px;
-	font-size: 16px;
-	font-family: 'robotolight',sans-serif;
-}
-
-.bottom__descr--p--right {
-	color: #97a1a4;
-	font-family: 'robotolight',sans-serif;
-	font-size: 16px;
-	margin-right: 30px;
-}
-
-.bottom__copyright {
-	float: right;
+.slider__show_section {
+	height: 100%;
+	flex:1;
+	position: relative;
 }
