--- a/source/style/pages/works.scss
+++ b/source/style/pages/works.scss
@@ -21,14 +21,174 @@ display: inline-block;
 	    background: linear-gradient(to right, #f0efe9 0%, #f0efe9 50%, #efebe0 50%, #efebe0 100%);
 	    height: 750px;
 }
-.slider__descr_section{
+.description{
 	height: 100%;
 	flex:1;
 	position: relative;
 }
 
-.slider__show_section {
+.description__block {
+	    top: 50%;
+    left: 50%;
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 415px;
+    text-align: center;
+}
+
+.description__heading {
+	    margin: 0 0 45px;
+    font: 36px/1 'BERNIERRegular-Regular', Helvetica, Arial;
+    color: #455a64;
+    text-align: center;
+}
+
+.description__heading-styling {
+	    width: 280px;
+    position: relative;
+    display: inline-block;
+
+    &:before {
+    	top: 15px;
+    	left: -45px;
+    	position: absolute;
+    }
+    &:after {
+    	top: 15px;
+    	right: -45px;
+    	position: absolute;
+    }
+   &:before,&:after {
+   	 content: '';
+    display: block;
+    width: 20px;
+    height: 5px;
+    background: #cbccc8;
+   }
+}
+
+.description__text {
+	margin: 0 0 45px;
+    text-align: center;
+    padding: 15px;
+    color: #20b5a1;
+    font: 16px/1 'Roboto-Medium', Helvetica, Arial;
+    text-transform: uppercase;
+    border-top: solid 1px #acd6ce;
+    border-bottom: solid 1px #acd6ce; 
+}
+
+.description__link {
+	    display: inline-block;
+    
+    background-size: 19px 19px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 0 20px 0 45px;
+    text-decoration: none;
+    font: 16px/45px 'Roboto-Medium', Helvetica, Arial;
+    -webkit-transition: opacity ease-in .2s;
+    transition: opacity ease-in .2s;
+}
+
+.visual {
 	height: 100%;
 	flex:1;
 	position: relative;
+}
+
+.visual__main-wrap {
+	height: 525px;
+    background-size: 535.8333px 346.6667px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.visual__switch-section {
+	height: 225px;
+    display: flex;
+}
+
+.visual__previous {
+
+    flex: 1;
+    position: relative;
+    height: 100%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: opacity ease-in .3s;
+}
+
+.visual__next {
+	 flex: 1;
+    position: relative;
+    height: 100%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: opacity ease-in .3s;
+}
+
+.about-me {
+	min-height: 1275px;
+    background: url('../img/bg_about.jpg') bottom no-repeat;
+}
+
+.about-me__heading {
+	background-size: 498px 175px;
+	 margin: 0;
+    padding: 70px 0;
+    text-align: center;
+    font: 63px/1 'BERNIERRegular-Regular', Helvetica, Arial;
+    color: #373e42;
+}
+
+.about-me__heading-style {
+	    display: inline-block;
+    position: relative;
+    max-width: 285px;
+    &:before,&:after {
+    	content: '';
+    display: block;
+    width: 20px;
+    height: 5px;
+    background: #cbcbc6;
+    }
+    &:before {
+        top: 25px;
+    left: -45px;
+    position: absolute;
+    }
+    &:after {
+    	top: 25px;
+    right: -45px;
+    position: absolute;
+    }
+}
+
+.about-me__reviews {
+	margin: 0 auto;
+    width: 785px;
+}
+
+.about-me__reviews-section {
+	    margin: 0 -40px 0 0;
+}
+
+.about-me__first-review {
+	display: inline-block;
+    margin: 0 40px 40px 0;
+    padding: 60px 0 0;
+    width: 370px;
+    min-height: 225px;
+    background: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.o…5.321-28.168-15.978-38.832z%22%20fill%3D%22%23D4D7D8%22%2F%3E%3C%2Fsvg%3E') left top no-repeat;
+    background-size: 30px;
+    color: #455a64;
+    font: 16px/22px 'Roboto-Regular', Helvetica, Arial, sans-serif;
+}
+
+.about-me__review-text {
+	    margin: 0 0 30px;
 }
