--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -45,7 +45,7 @@ html
       .info
        ul.about
          li.about--item
-          a(href="#").about--link.first Мои работы
+          a(href="/works.html").about--link.first Мои работы
          li.about--item
           a(href="/about.html").about--link Обо мне
          li.about--item 
