--- a/source/template/common/_works_header.jade
+++ b/source/template/common/_works_header.jade
@@ -28,4 +28,4 @@ header.header
       .blog__header--background
        h1.author__header Бутин Максим
        p.author__text Личный сайт, веб разработчика
-    <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85"preserveaspectratio="none" class="triangle"><polygon class="triangle-left" points="0,0   0,86   500.8,86   500.8,75.5"></polygon><polygon class="triangle-right" points="1000,0   1000,86   500,86   500,75.5"></polygon></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85"preserveaspectratio="none" class="triangle"><polygon class="triangle--left works" points="0,0   0,86   500.8,86   500.8,75.5"></polygon><polygon class="triangle--right works" points="1000,0   1000,86   500,86   500,75.5"></polygon></svg>
