--- a/source/template/works.jade
+++ b/source/template/works.jade
@@ -2,7 +2,7 @@ doctype html
 html
  include common/_head
  body
-  include common/_about_header
+  include common/_works_header
   h2.works__title._logo
    span.works__title_words Мои работы
   section.slider__section
