--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -43,13 +43,9 @@ html
        a(href="#").soc__link
         <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="23" viewBox="0 0 24 22.9"><path class="icons" d="M2.9 5.3H2.8C1.1 5.3 0 4.2 0 2.7 0 1.2 1.2 0 2.9 0c1.8 0 2.9 1.2 2.9 2.7C5.8 4.2 4.7 5.3 2.9 5.3zM5.5 22.9H0.3V7.5h5.2V22.9zM24 22.9h-5.1v-8.3c0-2.1-0.7-3.5-2.6-3.5 -1.4 0-2.3 1-2.6 1.9 -0.1 0.3-0.2 0.8-0.2 1.3v8.6H8.3c0.1-14 0-15.5 0-15.5h5.1v2.3h0c0.7-1.1 1.9-2.6 4.7-2.6 3.4 0 5.9 2.2 5.9 7V22.9z" fill="#FFF"/></svg>
       .info
-       ul.about
-         li.about--item
-          a(href="/works.html").about--link.first Мои работы
-         li.about--item
+          a(href="/works.html").about--link Мои работы
           a(href="/about.html").about--link Обо мне
-         li.about--item 
-          a(href="/blog.html").about--link.last Блог
+          a(href="/blog.html").about--link Блог
     .page__back
       .mainframe#good
        .authorize#sub
