--- a/source/template/works.jade
+++ b/source/template/works.jade
@@ -28,17 +28,17 @@ html
         .about-me__review
           .about-me__review-text Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
           .about-me__img-section
-            .about-me__img
-           .about-me__signature
-            .about-me__signature-name Ковальчук Дмитрий
-            .about-me__signature-info Основатель школы LoftSchool
+            .about-me__dima
+            .about-me__signature
+             .about-me__signature-name Ковальчук Дмитрий
+             .about-me__signature-info Основатель школы LoftSchool
          .about-me__review
-          .about-me__review-text Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+          .about-me__review-text Этот код выдержит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
           .about-me__img-section
-            .about-me__img
-          .about-me__signature
-            .about-me__signature-name Зар Захаров
-            .about-me__signature-info Главный преподаватель курса
+            .about-me__zar
+            .about-me__signature
+             .about-me__signature-name Зар Захаров
+             .about-me__signature-info Главный преподаватель курса
       .about-me__contact-section
         h3.contact__heading Связаться со мной
         form(action="contact-me__form")
