--- a/source/style/common/main_cards.scss
+++ b/source/style/common/main_cards.scss
@@ -28,48 +28,40 @@
 	padding-top: 37px;
 }
 
+
 .info {
-	position: absolute;
-    left: 0;
-    bottom: 12px;
-    font-family: 'robotomedium',sans-serif;
-    & a {
-	color: #fff;
-	background-color: #13b6a1;
-	
-    }
-    & a.about--link:hover {
-    	background-color: #088c85;
-    }
-}
-
-.about {
-	padding: 0;
-	margin: 0;
-	list-style-type: none;
-	display: inline-block;
-	width: 100%;
-}
-
-.about--item {
-	display: inline-block;
-	padding: 0;
+  display: flex;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  font-family: 'robotomedium',sans-serif;
+  height: 50px;
 }
 
 .about--link {
-	padding: 12px 32px;
-	margin: 0 -3px 0 0;
-	text-decoration: none;
-
+  flex: 1 0 auto;
+  color: #fff;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 50px;
+    transition: background ease-in .1s;
+background-color: #13b6a1;
+box-sizing: border-box;
+border-right: 1px solid #fff;
+&:first-child {
+  border-bottom-left-radius: 5px;
+}
+&:last-child {
+  border:0;
+  border-bottom-right-radius: 5px;
+}
+&:hover {
+  background-color: #088c85;
+}
 }
 
-a.about--link.first{
-		border-bottom-left-radius: 5px;
-	}
-	a.about--link.last{
-		border-bottom-right-radius: 5px;
-		padding: 12px 34px;
-	}
+
 
 .page__front, .page_back {
  
@@ -342,5 +334,19 @@ transition: background ease-in .2s;
   }
   &.last {
     border-bottom-right-radius: 5px;
+  }
+}
+
+@media screen and(max-width: 400px) {
+  .auth {
+    right: 65px;
+  }
+  .mainframe {
+    width: 303px;
+
+  }
+  .footer-welcome {
+    width: 260px;
+    left: 50px;
   }
 }
